fix taskbar wrapping minimize and expand sizing

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body{
 
 .start:hover{
     background-color: transparent !important;
+    color: white !important;
 }
 .activity-right{
     display: flex;
@@ -412,7 +413,7 @@ input:checked + .button::before{
     scrollbar-color: red;
     scrollbar-width: thin;
     min-width: 196px;
-    min-height: 96px;
+    min-height: 115px;
     max-width: 362px;
     max-height: 500px;
     opacity: 0.7;
